# reviwo

./: .env.example  .vercelignore  README.md  build_embed.py  businesses.json  embed.html  embed.js  pyproject.toml  vercel.json  yelp-config.json  yelp-reviews.json  yelp-server.py  yelp_fetch.py
api/: index.py  yelp_reviews.py
public/: elfsight-widget.html  embed.html  embed.js  reviwo-widget.html  widget.css  widget.js
public/reviews/: mobile-dog-grooming-irvine-2.json
reviwo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
