[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reviwo"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "fastapi>=0.115.0",
]

[tool.vercel]
entrypoint = "api.index:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]
